--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -1316,7 +1316,8 @@ StScrollBar {
 .list-search-result:focus, .search-provider-icon:hover,
 .list-search-result:hover, .search-provider-icon:selected,
 .list-search-result:selected {
-  background-color: rgba(254, 254, 254, 0.1);
+  background-color: rgba(255, 106, 0, 0.5);
+  color: #ffffff;
   transition-duration: 200ms; }
 
 .search-provider-icon:active,
@@ -1458,10 +1459,12 @@ StScrollBar {
   .grid-search-result:hover .overview-icon,
   .grid-search-result:focus .overview-icon,
   .grid-search-result:selected .overview-icon {
-    background-color: rgba(14, 17, 29, 0.5);
+    color: #ffffff;
+    background-color: rgba(255, 106, 0, 0.5);
     transition-duration: 0ms;
     border-image: none;
-    background-image: none; }
+    background-image: none;
+    border-radius: o 0.5em 0.5em 0.5em 0.5em; }
 
 .app-well-app-running-dot {
   width: 4px;
